add many endpoints
