# app/api/user/userView.py
@@ -1,6 +1,7 @@
 from flask import request
 from app.MethodView import SuperView
 import json
+from app.util import exists
 
 
 class UserView(SuperView): 
@@ -10,14 +11,20 @@ class UserView(SuperView):
     _decorators = []
 
     resource = 'user'
-    mask = {'password': False}
+    mask = {'password', 'location.cityId' }
 
     def post(self):
       body = request.json
+      # fetch city
+      if exists(body,['location','cityId']):
+        body['location']['city'] = self.retrieve(body['location']['cityId'],'city',['city'])[0]['city']
       return self.insert(body)
 
     def put(self, userId):
       body = request.json
+      # fetch city
+      if exists(body,['location','cityId']):
+        body['location']['city'] = self.retrieve(body['location']['cityId'],'city',['city'])[0]['city']
       return self.update(userId, body)
 
     def delete(self, userId):
